tests/analyzer/fail/struct-duplicate-field.api
// expected: 6001

type bad = struct {};